# ecnu_ur5_setup

./: .gitignore  readme.md
Boost.NumPy/: CMakeLists.txt  package.xml
ecnu_ur5_bringup/: CMakeLists.txt  package.xml
ecnu_ur5_bringup/launch/: ecnu_ur5.launch  ecnu_ur5_drivers.launch
ecnu_ur5_setup_bringup/: CMakeLists.txt  package.xml
ecnu_ur5_setup_bringup/config/: easy_handeye_eye_on_base.yaml  easy_handeye_eye_on_hand.yaml  for_test.rviz
ecnu_ur5_setup_bringup/launch/: ecnu_ur5_setup.launch  xtion.launch
ecnu_ur5_setup_bringup/scripts/: publisher_tf.py
ecnu_ur5_setup_moveit_config/: CMakeLists.txt  package.xml
ecnu_ur5_setup_moveit_config/config/: controllers.yaml  ecnu_ur5.srdf  joint_limits.yaml  joint_limits_fast.yaml  kinematics.yaml  ompl_planning.yaml
ecnu_ur5_setup_moveit_config/launch/: default_warehouse_db.launch  demo.launch  ecnu_ur5_moveit_controller_manager.launch.xml  ecnu_ur5_moveit_sensor_manager.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
ecnu_ur5_support/: CMakeLists.txt  ecnu_ur5.rviz  package.xml
ecnu_ur5_support/launch/: camera_upload.launch  ecnu_ur5_upload.launch  vis.launch
ecnu_ur5_support/urdf/: camera.xacro  ecnu_ur5_robot.xacro  table.xacro  ur5.urdf
ecnu_ur5_support/urdf/xtion/: camera_properties.urdf.xacro  xtion_pro_live.urdf.xacro
robotiq_85_gripper/robotiq_85_bringup/launch/: robotiq_85.launch
robotiq_85_gripper/robotiq_85_description/urdf/: robotiq_85_gripper.urdf.xacro
robotiq_85_gripper/robotiq_85_driver/src/robotiq_85/: gripper_io.py  robotiq_85_driver.py  robotiq_85_gripper_test.py
robotiq_85_gripper/robotiq_85_moveit_config/launch/: robotiq_85_moveit_planning_execution.launch
robotiq_85_gripper/robotiq_85_msgs/: CMakeLists.txt
robotiq_85_gripper/robotiq_85_msgs/srv/: Gripper.srv
robotiq_85_rs485_action_server/: CMakeLists.txt  package.xml
robotiq_85_rs485_action_server/include/robotiq_85_rs485_action_server/: robotiq_85_rs485_action_server.h
robotiq_85_rs485_action_server/launch/: robotiq_85_rs485_action_server.launch
robotiq_85_rs485_action_server/src/: robotiq_85_rs485_action_server_client_test.cpp  robotiq_85_rs485_action_server_node.cpp  robotiq_85_rs_485_action_server.cpp
ur_kin_py/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
ur_kin_py/src/: test_ik.py  ur_kin_py.cpp
ur_kin_py/src/ur_kin_py/: kin.py
