<package>
  <name>boost_numpy</name>
  <version>1.1.102</version>
  <description>
      Python wrappers for converting Boost C++ datatypes into Numpy objects.
  </description>
  <url type="website">http://ros.org/wiki/boost_numpy</url>
  <maintainer email="kphawkins@gatech.edu">Kelsey Hawkins</maintainer>
  <license>See README</license>

  <author>Jim Bosch</author>
  <author>Ankit Daftery</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
